K8s/Yaml/redis-cluster/redis-cluster-headless-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-cluster-headless
  namespace: game-server
  labels:
    app: redis-cluster
  annotations:
    service.alpha.kubernetes.io/tolerate-unready-endpoints: "true"
spec:
  ports:
  - port: 6379
    targetPort: 6379
    name: client
  - port: 16379
    targetPort: 16379
    name: gossip
  clusterIP: None
  selector:
    app: redis-cluster
  publishNotReadyAddresses: true
