K8s/Yaml/redis-cluster/redis-cluster-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-cluster
  namespace: game-server
  labels:
    app: redis-cluster
spec:
  ports:
  - port: 6379
    targetPort: 6379
    name: client
  selector:
    app: redis-cluster
